--- a/EcomLocatorV2/Views/UsersPage.xaml
+++ b/EcomLocatorV2/Views/UsersPage.xaml
@@ -2,15 +2,28 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
+             xmlns:helpers="clr-namespace:EcomLocatorV2.Helpers"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="EcomLocatorV2.Views.UsersPage">
 
-    <ListView ItemsSource="{Binding Users}">
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <TextCell Text="{Binding FirstName}" Detail="{Binding LastName}"></TextCell>
-            </DataTemplate>
-        </ListView.ItemTemplate>
-    </ListView>
+    <StackLayout>
+
+        <SearchBar x:Name="SearchBar" SearchCommand="{Binding SearchCommand}" SearchCommandParameter="{Binding SearchText, Source={x:Reference SearchBar}}">
+            <SearchBar.Behaviors>
+                <helpers:TextChangedBehavior />
+            </SearchBar.Behaviors>
+        </SearchBar>
+
+        <ListView ItemsSource="{Binding FilteredUsers}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding FirstName}" Detail="{Binding LastName}"></TextCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+    </StackLayout>
+    
+    
     
 </ContentPage>
