user details - first attempt
changed text and details colors (UserPage.xaml)
refactoring search command getter
deleted redundant code for "searchText" (search command used instead)
created new view and viewmodel for Users Details

--- a/EcomLocatorV2/Views/UsersPage.xaml
+++ b/EcomLocatorV2/Views/UsersPage.xaml
@@ -14,10 +14,10 @@
             </SearchBar.Behaviors>
         </SearchBar>
 
-        <ListView ItemsSource="{Binding FilteredUsers}">
+        <ListView ItemsSource="{Binding FilteredUsers}" SelectedItem="{Binding SelectedUser}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding FirstName}" Detail="{Binding LastName}"></TextCell>
+                    <TextCell Text="{Binding FirstName}" TextColor="Blue" Detail="{Binding LastName}" DetailColor="Indigo"></TextCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
