userdetails - updated view synch with 2nd api
created UserDetailsApi - to deserialize JSON to single object from 2nd API
changed parameters in OnNavigatedTo method -> user id from selected user from list (plus 1st and las name, so it's visible on navigated page till new data are readen from 2nd api);
changed UserDetails.xaml that shows all atributes from selected object -> Binding User.*}

--- a/EcomLocatorV2/Views/UserDetail.xaml
+++ b/EcomLocatorV2/Views/UserDetail.xaml
@@ -6,8 +6,12 @@
              x:Class="EcomLocatorV2.Views.UserDetail">
 
     <StackLayout>
-        <Label Text="{Binding UserFirstName}"/>
-        <Label Text="{Binding UserLastName}"/>
+        <StackLayout>
+            <Label Text="{Binding User.FirstName}" TextColor="Indigo" FontSize="15" FontAttributes="Bold"/>
+            <Label Text="{Binding User.LastName}" TextColor="Indigo" FontSize="15" FontAttributes="Bold"/>
+            <Label Text="{Binding User.Age}" TextColor="Indigo" FontSize="15" FontAttributes="Bold"/>
+            <Label Text="{Binding User.City}" TextColor="Indigo" FontSize="15" FontAttributes="Bold"/>
+        </StackLayout>
     </StackLayout>
     
 </ContentPage>
