--- a/EcomLocatorV2/Views/UsersPage.xaml
+++ b/EcomLocatorV2/Views/UsersPage.xaml
@@ -7,14 +7,20 @@
              x:Class="EcomLocatorV2.Views.UsersPage"
              NavigationPage.HasNavigationBar="false">
 
-    <StackLayout x:Name="UserListPage">
+    <AbsoluteLayout x:Name="UserListPage">
 
-        <SearchBar x:Name="SearchBar" SearchCommand="{Binding SearchCommand}" SearchCommandParameter="{Binding SearchText, Source={x:Reference SearchBar}}">
+        <SearchBar x:Name="SearchBar" 
+                   SearchCommand="{Binding SearchCommand}" 
+                   SearchCommandParameter="{Binding SearchText, Source={x:Reference SearchBar}}"
+                   AbsoluteLayout.LayoutBounds="0,0,1, 50"
+                   AbsoluteLayout.LayoutFlags="PositionProportional, WidthProportional" >
             <SearchBar.Behaviors>
                 <helpers:TextChangedBehavior />
             </SearchBar.Behaviors>
         </SearchBar>
-        <ListView ItemsSource="{Binding FilteredUsers}">
+        <ListView ItemsSource="{Binding FilteredUsers}"
+                  AbsoluteLayout.LayoutBounds="0, 50, 1, 1"
+                  AbsoluteLayout.LayoutFlags="XProportional, SizeProportional">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -35,6 +41,10 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <ActivityIndicator IsRunning="{Binding IsBusy}" Color="DarkRed" IsVisible="{Binding IsBusy}"/>
-    </StackLayout>
+        <ActivityIndicator IsRunning="{Binding IsBusy}" 
+                           Color="DarkRed" 
+                           IsVisible="{Binding IsBusy}"
+                           AbsoluteLayout.LayoutBounds="0.5, 0.5, 50, 50"
+                           AbsoluteLayout.LayoutFlags="PositionProportional"/>
+    </AbsoluteLayout>
 </ContentPage>
