--- a/EcomLocatorV2/Views/UserDetail.xaml
+++ b/EcomLocatorV2/Views/UserDetail.xaml
@@ -6,14 +6,6 @@
              x:Class="EcomLocatorV2.Views.UserDetail"
              Title="User Details">
 
-    <ContentPage.Resources>
-        <Style x:Key="label" TargetType="Label">
-            <Setter Property="TextColor" Value="#171D1C"/>
-            <Setter Property="FontSize" Value="15"/>
-            <Setter Property="FontAttributes" Value="Bold"/>
-        </Style>
-    </ContentPage.Resources>
-
     <ScrollView>
     <Grid RowSpacing="0">
         <Grid.RowDefinitions>
@@ -29,22 +21,22 @@
         </Grid>
         <StackLayout Grid.Row="2" Padding="20,10">
             <Label Text="First name"/>
-            <Label Text="{Binding UserDetails.FirstName}" Style="{StaticResource label}"/>
+            <Label Text="{Binding UserDetails.FirstName}" Style="{StaticResource label}" />
             <Label Text="Last name"/>
-            <Label Text="{Binding UserDetails.LastName}" Style="{StaticResource label}"/>
+            <Label Text="{Binding UserDetails.LastName}" Style="{StaticResource label}" />
         </StackLayout>
         <Grid Grid.Row="3">
             <StackLayout Padding="20,10">
                 <StackLayout Orientation="Horizontal">
                     <Image Source="birthday.png" WidthRequest="25" HeightRequest="25" />
-                    <Label Text="{Binding UserDetails.Age}" Style="{StaticResource label}" VerticalTextAlignment="End"/>
+                    <Label Text="{Binding UserDetails.Age}" Style="{StaticResource labelDetail}"/>
                 </StackLayout>
                 <StackLayout Orientation="Horizontal">
                     <Image Source="flag.png" WidthRequest="25" HeightRequest="25" />
-                    <Label Text="{Binding UserDetails.City}" Style="{StaticResource label}" VerticalTextAlignment="End"/>
+                    <Label Text="{Binding UserDetails.City}" Style="{StaticResource labelDetail}"/>
                 </StackLayout>
             </StackLayout>
-            <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" Color="DarkRed"/>
+            <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}"/>
         </Grid>
         
         <Image 
